--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="hero-text">
-        <h1>Work<br>Anywhere</h1>
+        <h1>keine<br>Ahnung</h1>
         <p>
           Die Work Collection – Minimalistische Taschen für eine neue Generation von Profis.
           <a href="#">Mehr erfahren</a>
